--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'mtj-circle-plugin'
 
 android {
     compileSdkVersion 28
@@ -20,16 +19,9 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-v4:+'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-}
-
-MtjCirclePluginConfig {
-    // 设置appkey，必须设置，否则插件使用无效
-    appkey = '906770434b'
-    // 设置debug 开关，默认关闭，如果需要查看日志则打开开关（true），建议正式版关闭以避免影响性能
-    debug = false
-    // 默认启动此插件，如果开发者不需要可以禁用（false）
-    enabled = true
+    implementation files('libs/Baidu_Mtj_android_3.9.5.5.jar')
+    implementation 'com.android.support:recyclerview-v7:+'
+    implementation 'com.android.support:support-v4:+'
 }
